--- a/src/style/pages/lessons/inner/content/_lessons-inner-connect.scss
+++ b/src/style/pages/lessons/inner/content/_lessons-inner-connect.scss
@@ -15,6 +15,7 @@
             button {
                 width: 100%;
                 @include learn-serbian-button;
+                position: relative;
             }
 
             .button-active,
