--- a/src/style/pages/lessons/inner/content/_main.scss
+++ b/src/style/pages/lessons/inner/content/_main.scss
@@ -28,6 +28,10 @@
             @include learn-serbian-button;
             font-size: set-size(md);
         }
+
+        .button-locked {
+            @include learn-serbian-disabled-button;
+        }
     }
 
     img {
