--- a/src/style/pages/lessons/inner/content/_main.scss
+++ b/src/style/pages/lessons/inner/content/_main.scss
@@ -24,7 +24,7 @@
             margin: 0;
         }
 
-        button {
+        .block-button {
             @include learn-serbian-button;
             font-size: set-size(md);
         }
