SpecialLetters in InnerConversation

--- a/src/style/components/_special-letters.scss
+++ b/src/style/components/_special-letters.scss
@@ -11,4 +11,8 @@
         border-radius: 7px;
         padding: 5px 7px;
     }
+
+    .button-disabled {
+        @include learn-serbian-disabled-button;
+    }
 }
