--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1117,6 +1117,7 @@ footer .footer-copyright span {
   height: 400px;
   width: 100%;
   position: relative;
+  padding-top: 10px;
   padding-bottom: 30px;
   overflow: scroll;
   overflow-x: hidden;
@@ -1214,7 +1215,7 @@ footer .footer-copyright span {
   justify-content: center;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-keyboard-holder {
   width: 100%;
